[package]
name = "cumulus-client-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Cumulus dependencies
cumulus-client-consensus-common = { path = "../consensus/common" }
cumulus-client-collator = { path = "../collator" }
cumulus-client-pov-recovery = { path = "../pov-recovery" }
cumulus-primitives-core = { path = "../../primitives/core" }

# Substrate dependencies
sc-chain-spec = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-client-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-service = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-telemetry = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-tracing = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus-babe = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-blockchain = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/compound-finance/polkadot", branch = "gateway" }
polkadot-service = { git = "https://github.com/compound-finance/polkadot", branch = "gateway" }
polkadot-overseer = { git = "https://github.com/compound-finance/polkadot", branch = "gateway" }

# Other deps
tracing = "0.1.22"
codec = { package = "parity-scale-codec", version = "2.0.0" }
parking_lot = "0.10.2"
