[package]
name = "cumulus-pallet-parachain-system"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Base pallet for cumulus-based parachains"

[dependencies]
# Cumulus dependencies
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent", default-features = false }
cumulus-pallet-parachain-system-proc-macro = { path = "proc-macro", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/compound-finance/polkadot", default-features = false, features = [ "wasm-api" ], branch = "gateway" }
xcm = { git = "https://github.com/compound-finance/polkadot", default-features = false, branch = "gateway" }

# Substrate dependencies
frame-support = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-balances = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-inherents = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-io = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-std = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-version = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
frame-system = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-state-machine = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-trie = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-externalities = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }

# Other Dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
serde = { version = "1.0.101", optional = true, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
environmental = { version = "1.1.2", default-features = false }

[dev-dependencies]
# Other Dependencies
hex-literal = "0.2.1"
lazy_static = "1.4"

# Substrate dependencies
sp-version = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-client-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-keyring = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-tracing = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

# Cumulus dependencies
cumulus-test-client = { path = "../../test/client" }
cumulus-test-relay-sproof-builder = { path = "../../test/relay-sproof-builder" }

[features]
default = [ "std" ]
std = [
	"serde",
	"codec/std",
	"frame-support/std",
	"pallet-balances/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"log/std",
	"sp-state-machine/std",
	"sp-trie/std",
	"sp-externalities/std",
	"frame-system/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-parachain-inherent/std",
	"cumulus-pallet-parachain-system-proc-macro/std",
	"environmental/std",
	"xcm/std"
]
