[package]
name = 'shell-runtime'
version = '0.1.0'
authors = ["Parity Technologies <admin@parity.io>"]
edition = '2018'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
parachain-info = { path = "../pallets/parachain-info", default-features = false }

# Substrate dependencies
sp-std = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-api = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-io = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-version = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-session = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-offchain = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-block-builder = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-transaction-pool = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-inherents = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }

frame-support = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
frame-executive = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
frame-system = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }

# Cumulus dependencies
cumulus-pallet-parachain-system = { path = "../../pallets/parachain-system", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-utility = { path = "../../primitives/utility", default-features = false }
cumulus-pallet-dmp-queue = { path = "../../pallets/dmp-queue", default-features = false }
cumulus-pallet-xcm = { path = "../../pallets/xcm", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/compound-finance/polkadot", default-features = false, branch = "gateway" }
xcm = { git = "https://github.com/compound-finance/polkadot", default-features = false, branch = "gateway" }
xcm-builder = { git = "https://github.com/compound-finance/polkadot", default-features = false, branch = "gateway" }
xcm-executor = { git = "https://github.com/compound-finance/polkadot", default-features = false, branch = "gateway" }

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.3.1"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"parachain-info/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-utility/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
]
