[package]
name = "cumulus-primitives-utility"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-std = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-trie = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
frame-support = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/compound-finance/polkadot", default-features = false, branch = "gateway" }
polkadot-primitives = { git = "https://github.com/compound-finance/polkadot", default-features = false, branch = "gateway" }
polkadot-core-primitives = { git = "https://github.com/compound-finance/polkadot", default-features = false, branch = "gateway" }
xcm = { git = "https://github.com/compound-finance/polkadot", default-features = false, branch = "gateway" }

cumulus-primitives-core = { path = "../core", default-features = false }

# Other dependencies
impl-trait-for-tuples = "0.2.1"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [ "derive" ] }


[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-std/std",
	"polkadot-primitives/std",
	"polkadot-parachain/std",
	"polkadot-core-primitives/std",
	"sp-runtime/std",
	"sp-trie/std",
	"frame-support/std",
	"cumulus-primitives-core/std",
]
