[package]
name = "cumulus-test-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sc-service = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-block-builder = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-executor = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-executor-common = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
substrate-test-client = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-keyring = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-test-primitives = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-blockchain = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-inherents = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-io = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-timestamp = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-state-machine = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
frame-system = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
pallet-transaction-payment = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
pallet-balances = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

# Cumulus deps
cumulus-test-runtime = { path = "../runtime" }
cumulus-test-service = { path = "../service" }
cumulus-test-relay-sproof-builder = { path = "../relay-sproof-builder" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/compound-finance/polkadot", branch = "gateway" }
polkadot-parachain = { git = "https://github.com/compound-finance/polkadot", branch = "gateway" }

# Other deps
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [ "derive" ] }
