[package]
name = "cumulus-test-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

# Substrate dependencies
frame-executive = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
frame-support = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
frame-system = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-balances = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-randomness-collective-flip = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-sudo = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-timestamp = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
pallet-transaction-payment = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-api = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-block-builder = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-inherents = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-io = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-offchain = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-session = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-std = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-transaction-pool = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-version = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }

# Cumulus dependencies
cumulus-pallet-parachain-system = { path = "../../pallets/parachain-system", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-timestamp = { path = "../../primitives/timestamp", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/compound-finance/polkadot", default-features = false, branch = "gateway" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
upgrade = []
