[package]
name = "cumulus-test-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
rand = "0.7.3"
serde = { version = "1.0.101", features = ["derive"] }
async-trait = "0.1.42"

# Substrate
frame-system = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
pallet-transaction-payment = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-basic-authorship = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-block-builder = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-chain-spec = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-client-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-executor = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-network = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-rpc = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-service = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-telemetry = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-tracing = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-transaction-pool = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-arithmetic = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-block-builder = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-blockchain = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-keyring = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-offchain = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", default-features = false, branch = "gateway" }
sp-session = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-state-machine = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-timestamp = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-transaction-pool = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-trie = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
substrate-test-client = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

# Polkadot
polkadot-primitives = { git = "https://github.com/compound-finance/polkadot", branch = "gateway" }
polkadot-service = { git = "https://github.com/compound-finance/polkadot", branch = "gateway" }
polkadot-test-service = { git = "https://github.com/compound-finance/polkadot", branch = "gateway" }
polkadot-overseer = { git = "https://github.com/compound-finance/polkadot", branch = "gateway" }

# Cumulus
cumulus-client-consensus-relay-chain = { path = "../../client/consensus/relay-chain" }
cumulus-client-network = { path = "../../client/network" }
cumulus-client-service = { path = "../../client/service" }
cumulus-client-consensus-common = { path = "../../client/consensus/common" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }
cumulus-test-runtime = { path = "../runtime" }
cumulus-test-relay-validation-worker-provider = { path = "../relay-validation-worker-provider" }

# RPC related dependencies
jsonrpc-core = "18.0.0"

[dev-dependencies]
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["macros"] }

# Polkadot dependencies
polkadot-test-runtime = { git = "https://github.com/compound-finance/polkadot", branch = "gateway" }
polkadot-test-service = { git = "https://github.com/compound-finance/polkadot", branch = "gateway" }

# Substrate dependencies
sc-cli = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
substrate-test-utils = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-maybe-compressed-blob = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-version = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

# Cumulus
cumulus-test-runtime-upgrade = { path = "../runtime-upgrade" }
